--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -64,10 +64,10 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
+$primary:       $indigo !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
-$info:          $cyan !default;
+$info:          $blue !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
@@ -240,9 +240,9 @@ $line-height-sm:              1.5 !default;
 $border-width:                1px !default;
 $border-color:                $gray-300 !default;
 
-$border-radius:               .5rem !default;
-$border-radius-lg:            .75rem !default;
-$border-radius-sm:            .25rem !default;
+$border-radius:               .5rem !default;  // 8px
+$border-radius-lg:            .75rem !default; // 12px
+$border-radius-sm:            .25rem !default; // 4px
 
 $rounded-pill:                50rem !default;
 
@@ -277,9 +277,13 @@ $embed-responsive-aspect-ratios: join(
 //
 // Font, line-height, and color for body text, headings, and more.
 
+// Font import base
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&family=Roboto+Mono:wght@300&display=swap');
+
+
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-sans-serif:      'Inter', sans-serif !default;
+$font-family-monospace:       'Roboto Mono', monospace !default;
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
@@ -314,10 +318,10 @@ $display2-size:               5.5rem !default;
 $display3-size:               4.5rem !default;
 $display4-size:               3.5rem !default;
 
-$display1-weight:             300 !default;
-$display2-weight:             300 !default;
-$display3-weight:             300 !default;
-$display4-weight:             300 !default;
+$display1-weight:             100 !default;
+$display2-weight:             100 !default;
+$display3-weight:             100 !default;
+$display4-weight:             100 !default;
 $display-line-height:         $headings-line-height !default;
 
 $lead-font-size:              $font-size-base * 1.25 !default;
@@ -325,7 +329,7 @@ $lead-font-weight:            300 !default;
 
 $small-font-size:             80% !default;
 
-$text-muted:                  $gray-600 !default;
+$text-muted:                  $gray-400 !default;
 
 $blockquote-small-color:      $gray-600 !default;
 $blockquote-small-font-size:  $small-font-size !default;
